Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-32685

QWidget::setAttribute(Qt::WA_NativeWindow) call leads to crash on Android

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.2.0
    • 5.1.0
    • QPA
    • None
    • Android
    • 0bbc32a0cb3b71012a9245b84f69cdc8405ce5fc

      Calling of QWidget::setAttribute leads to crash when the project was run on Android. Test example is attached (Android directory is deleted due to limitations on attachment size).

        For Gerrit Dashboard: QTBUG-32685
        # Subject Branch Project Status CR V

            esabraha Eskil Abrahamsen Blomfeldt
            achernov Alexey Chernov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes