src/plugins/platforms/android/src/qandroidplatformintegration.cpp
@@ -118,6 +118,7 @@ bool QAndroidPlatformIntegration::hasCapability(Capability cap) const
     switch (cap) {
         case ThreadedPixmaps: return true;
         case NonFullScreenWindows: return false;
+        case NativeWidgets: return false;
         default:
 #ifndef ANDROID_PLUGIN_OPENGL
         return QPlatformIntegration::hasCapability(cap);
